fix(styles): remove gap and fix note in renaissance of cli

--- a/components/Note/note.module.css
+++ b/components/Note/note.module.css
@@ -8,7 +8,6 @@
   display: flex;
   align-items: center;
   margin-block: 36px;
-  gap: 1ch;
 }
 
 .note p {
